# AwesomeShell

./: .gitignore  README.md  meson.build
Source/: AST.hpp  Builtins.cpp  Builtins.hpp  Environment.cpp  Environment.hpp  Executor.cpp  Executor.hpp  Expander.cpp  Expander.hpp  Lexer.cpp  Lexer.hpp  Lowerer.cpp  Lowerer.hpp  Parser.cpp  Parser.hpp  Shell.cpp  Shell.hpp  Token.hpp  Version.hpp.in  main.cpp
Tests/: meson.build
Tests/Lexer/: main.cpp
